@@ -425,6 +425,7 @@ GEN     FpX_eval(GEN x,GEN y,GEN p);
 GEN     FpX_extgcd(GEN x, GEN y, GEN p, GEN *ptu, GEN *ptv);
 GEN     FpX_gcd(GEN x, GEN y, GEN p);
 GEN     FpX_get_red(GEN T, GEN p);
+GEN     FpX_halve(GEN y, GEN p);
 GEN     FpX_halfgcd(GEN x, GEN y, GEN p);
 GEN     FpX_invBarrett(GEN T, GEN p);
 int     FpX_is_squarefree(GEN f, GEN p);
@@ -3110,6 +3111,7 @@ GEN     FpXY_Fq_evaly(GEN Q, GEN y, GEN T, GEN p, long vx);
 GEN     Fq_Fp_mul(GEN x, GEN y, GEN T, GEN p);
 GEN     Fq_add(GEN x, GEN y, GEN T/*unused*/, GEN p);
 GEN     Fq_div(GEN x, GEN y, GEN T, GEN p);
+GEN     Fq_halve(GEN x, GEN T/*unused*/, GEN p);
 GEN     Fq_inv(GEN x, GEN T, GEN p);
 GEN     Fq_invsafe(GEN x, GEN T, GEN p);
 GEN     Fq_mul(GEN x, GEN y, GEN T, GEN p);
@@ -3434,6 +3436,7 @@ INLINE ulong  Fl_add(ulong a, ulong b, ulong p);
 INLINE long   Fl_center(ulong u, ulong p, ulong ps2);
 INLINE ulong  Fl_div(ulong a, ulong b, ulong p);
 INLINE ulong  Fl_double(ulong a, ulong p);
+INLINE ulong  Fl_halve(ulong y, ulong p);
 INLINE ulong  Fl_mul(ulong a, ulong b, ulong p);
 INLINE ulong  Fl_mul_pre(ulong a, ulong b, ulong p, ulong pi);
 INLINE ulong  Fl_neg(ulong x, ulong p);
@@ -3870,6 +3873,7 @@ INLINE GEN    Fp_add(GEN a, GEN b, GEN m);
 INLINE GEN    Fp_addmul(GEN x, GEN y, GEN z, GEN p);
 INLINE GEN    Fp_center(GEN u, GEN p, GEN ps2);
 INLINE GEN    Fp_div(GEN a, GEN b, GEN m);
+INLINE GEN    Fp_halve(GEN y, GEN p);
 INLINE GEN    Fp_inv(GEN a, GEN m);
 INLINE GEN    Fp_invsafe(GEN a, GEN m);
 INLINE GEN    Fp_mul(GEN a, GEN b, GEN m);
