@@ -44,6 +44,7 @@ LGr13- GP function polrootsreal
    ec_dfdy_evalQ, ec_2divpol_evalx, ec_half_deriv_2divpol_evalx
 HIL17- GP functions ellisog, ellapplyisog, ellcompisog
    18- [libpari] New function RgX_coeff
+BA 19- [libpari] New functions Fl_halve, Fp_halve, Flx_halve, Fq_halve
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
